# NeurNet

./: CMakeLists.txt  README.md  main.cpp
2048/: Cell.cpp  Cell.h  Direction.h  NeuralTrainingV2.cpp  NeuralTrainingV2.h  TTFE.cpp  TTFE.h  TTFENeuralTraining.cpp  TTFENeuralTraining.h  TTFENeuralUse.cpp  TTFENeuralUse.h
exceptions/: endOfGrid.h  noCellLeft.h
src/network/: NeuralNetwork.cpp  NeuralNetwork.h  NeuralNode.cpp  NeuralNode.h
src/storage/: Gene.cpp  Gene.h  Genome.cpp  Genome.h
src/use/: Pool.cpp  Pool.h  Specie.cpp  Specie.h
src/util/: Rates.cpp  Rates.h  util.cpp  util.h
